--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 <!--  <base href="/">-->
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUsgLTPFck90L3IB9l_CcTPLy4H5Lnwus"></script>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -38,7 +38,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1936113971';
+    var serviceWorkerVersion = '1813206118';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
